--- a/static/lecture/lecture_list.html
+++ b/static/lecture/lecture_list.html
@@ -40,7 +40,7 @@
 <body>
 <header>
     <div class="header_wrap">
-        <a href="http://ec2-54-180-116-142.ap-northeast-2.compute.amazonaws.com:8000/" class="logo">
+        <a href="/" class="logo">
             <img src="{% static 'resource/img/common/logo.png' %}" alt="runcoding">
         </a>
         <!-- gnb -->
