--- a/static/lecture/lecture_list.html
+++ b/static/lecture/lecture_list.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% load static %}
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -14,49 +13,49 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="runcoding">
     <meta property="og:description" content="runcoding">
-    <meta property="og:image" content="{% static 'resource/img/common/share_img.jpg' %}">
+    <meta property="og:image" content="../resource/img/common/share_img.jpg">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/font-awesome.min.css' %}">
+    <link rel="shortcut icon" href="../resource/img/common/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../resource/img/common/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="../resource/css/font-awesome.min.css">
 
     <!-- slick css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick-theme.css' %}" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/slick-theme.css" />
 
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/layout.css" />
 <!--<script>-->
 <!--var elearning_url       = "https://www.runcoding.co.kr"; var elearning_bbs_url   = "https://www.runcoding.co.kr/bbs"; var elearning_is_member = ""; var elearning_is_admin  = ""; var elearning_is_mobile = "0"; var elearning_bo_table  = ""; var elearning_sca       = ""; var elearning_editor    = ""; var elearning_cookie_domain = ""; </script>-->
 
-<script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
-<script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
-<script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
-<script src="{% static 'resource/js/common.js?ver=20200730001' %}"></script>
-<script src="{% static 'resource/js/wrest.js?ver=20200730001' %}"></script>
+<script src="../resource/js/vendor/jquery-3.4.1.min.js"></script>
+<script src="../resource/js/jquery-migrate-3.0.0.js"></script>
+<script src="../resource/js/vendor/modernizr-3.7.1.min.js"></script>
+<script src="../resource/js/common.js?ver=20200730001"></script>
+<script src="../resource/js/wrest.js?ver=20200730001"></script>
 </head>
 <body>
 <header>
     <div class="header_wrap">
-        <a href="/" class="logo">
-            <img src="{% static 'resource/img/common/logo.png' %}" alt="runcoding">
+        <a href="../index_runcoding.html" class="logo">
+            <img src="../resource/img/common/logo.png" alt="runcoding">
         </a>
         <!-- gnb -->
         <ul class="menu">
             <li>
-                <a href="{% static 'lecture/lecture_list.html' %}">코딩키트</a>
+                <a href="lecture_list.html">코딩키트</a>
             </li>
             <li>
-                <a href="{% static 'lounge/coding_lounge.html' %}">코딩라운지</a>
+                <a href="../lounge/coding_lounge.html">코딩라운지</a>
             </li>
 
             <li>
-                <a href="{% static 'comunity/coding_comunity.html' %}">커뮤니티</a>
+                <a href="../comunity/coding_comunity.html">커뮤니티</a>
             </li>
             <li>
-                <a href="{% static 'lecture/myclass_list.html' %}">나의 강의실</a>
+                <a href="myclass_list.html">나의 강의실</a>
             </li>
         </ul>
         <div class="ab_right">
@@ -67,7 +66,7 @@
 
             <!-- 로그인 -->
             <div class="user_menu">
-                <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
+                <span class="userImg"><img src="../resource/img/sub/img_user.png" alt="유저 프로필"></span>
                 <ul class="sub_menu">
                     <li>
                         <a href="mypage.html">내 프로필</a>
@@ -100,7 +99,7 @@
                 지금 시작해보세요.
             </p>
         </div>
-        <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
+        <img class="subVisual codingKit" src="../resource/img/sub/sv_codingKit.png" alt="코딩키트">
     </div>
 </section>
 <!-- sub visual -->
@@ -110,8 +109,8 @@
     <div class="lecture_list">
         <ul>
                 <li class="list01">
-                <a href="{% static 'lecture/lecture_view_arduino.html' %}">
-                    <img src="{% static 'resource/img/Trashcan/trashcan_main.jpg' %}" alt="코딩키트 썸네일">
+                <a href="lecture_view_arduino.html">
+                    <img src="../resource/img/Trashcan/trashcan_main.jpg" alt="코딩키트 썸네일">
                     <div class="text_area">
                             <span>
                                 <small class="type">아두이노</small>
@@ -119,11 +118,11 @@
                             </span>
                     <div class="ckInfo">
                                 <span class="period">
-                                    <img src="{% static 'resource/img/sub/ico_calendar.png' %}" alt="기간">
+                                    <img src="../resource/img/sub/ico_calendar.png" alt="기간">
                                     3개월 과정
                                 </span>
                         <span class="num">
-                                    <img src="{% static 'resource/img/sub/ico_play.png' %}" alt="강의 수">
+                                    <img src="../resource/img/sub/ico_play.png" alt="강의 수">
                                     13개 강의
                                 </span>
                         <span class="price">
@@ -135,19 +134,19 @@
                 </a>
             </li>
                         <li class="list01">
-                <a href="{% static 'lecture/lecture_view_mblock.htmll' %}">
-                    <img src="{% static 'resource/img/Trashcan/trashcan_main.jpg' %}" alt="코딩키트 썸네일">
+                <a href="lecture_view_mblock.html">
+                    <img src="../resource/img/Trashcan/trashcan_main.jpg" alt="코딩키트 썸네일">
                     <div class="text_area">
                                 <span>
                                     <small class="type">엠블럭</small>
                                     [엠블럭 + AI 코딩] 스마트 휴지통                            </span>
                         <div class="ckInfo">
                                     <span class="period">
-                                        <img src="{% static 'resource/img/sub/ico_calendar.png' %}" alt="기간">
+                                        <img src="../resource/img/sub/ico_calendar.png" alt="기간">
                                         3개월 과정
                                     </span>
                             <span class="num">
-                                        <img src="{% static 'resource/img/sub/ico_play.png' %}" alt="강의 수">
+                                        <img src="../resource/img/sub/ico_play.png" alt="강의 수">
                                         12개 강의
                                     </span>
                             <span class="price">
@@ -167,7 +166,7 @@
             <span>SEARCH</span>
             <div class="input_area">
                 <input type="text" name="src_inp" id="src_inp" placeholder="검색어 입력">
-                <button type="button"><img src="{% static 'resource/img/sub/ico_search.png' %}" alt="검색"></button>
+                <button type="button"><img src="../resource/img/sub/ico_search.png" alt="검색"></button>
             </div>
         </div>
         <div class="category">
@@ -197,9 +196,9 @@
     });
 </script>
 <div class="banner bottom">
-    <img class="bg left01" src="{% static 'resource/img/sub/bg_botBanner_left01.png' %}" alt="bg01">
-    <img class="bg left02" src="{% static 'resource/img/sub/bg_botBanner_left02.png' %}" alt="bg02">
-    <img class="bg right" src="{% static 'resource/img/sub/bg_botBanner_right.png' %}" alt="bg03">
+    <img class="bg left01" src="../resource/img/sub/bg_botBanner_left01.png" alt="bg01">
+    <img class="bg left02" src="../resource/img/sub/bg_botBanner_left02.png" alt="bg02">
+    <img class="bg right" src="../resource/img/sub/bg_botBanner_right.png" alt="bg03">
     <span>
                 CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
                 지금 시작해보세요.
@@ -209,7 +208,7 @@
 
 <footer>
     <div class="footer">
-        <img class="ci" src="{% static 'resource/img/common/logo_footer.png' %}" alt="런코딩">
+        <img class="ci" src="../resource/img/common/logo_footer.png" alt="런코딩">
         <div class="footerText">
             <div class="information">
                 <span>INFORMATION</span>
@@ -256,10 +255,10 @@
             <div class="snsArea">
                 <span>SNS</span>
                 <div class="snsBtn">
-                    <a><img src="{% static 'resource/img/common/ico_kakaoTalk.png' %}" alt="kakaotalk"></a>
-                    <a><img src="{% static 'resource/img/common/ico_instagram.png' %}" alt="instagram"></a>
-                    <a><img src="{% static 'resource/img/common/ico_naverBlog.png' %}" alt="naverblog"></a>
-                    <a><img src="{% static 'resource/img/common/ico_youtube.png' %}" alt="youtube"></a>
+                    <a><img src="../resource/img/common/ico_kakaoTalk.png" alt="kakaotalk"></a>
+                    <a><img src="../resource/img/common/ico_instagram.png" alt="instagram"></a>
+                    <a><img src="../resource/img/common/ico_naverBlog.png" alt="naverblog"></a>
+                    <a><img src="../resource/img/common/ico_youtube.png" alt="youtube"></a>
                 </div>
             </div>
         </div>
