--- a/static/lecture/lecture_view_mblock.html
+++ b/static/lecture/lecture_view_mblock.html
@@ -1,92 +1,88 @@
 <!DOCTYPE html>
-{% load static %}
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>코딩키트 | 머릿속 생각을 쉽게,뚝딱 런코딩</title>
+    <title>머릿속 생각을 쉽게,뚝딱 런코딩</title>
     <meta name="description" content="" />
     <meta name="Keywords" content="runcoding" />
     <meta http-equiv="Copyright" content="" />
-<!--        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index,follow">
     <meta name="format-detection" content="telephone=no" />
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="runcoding">
     <meta property="og:description" content="runcoding">
-    <meta property="og:image" content="{% static 'resource/img/common/share_img.jpg' %}">
+    <meta property="og:image" content="../resource/img/common/share_img.jpg">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'resource/img/common/favicon.ico' %}" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/font-awesome.min.css' %}">
+    <link rel="shortcut icon" href="assets/img/common/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/img/common/favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" type="text/css" href="../resource/css/font-awesome.min.css">
 
     <!-- slick css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/slick-theme.css' %}" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/slick-theme.css" />
 
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/reset.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/common.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'resource/css/layout.css' %}" />
-<!--<script>-->
-<!--var elearning_url       = "https://www.runcoding.co.kr"; var elearning_bbs_url   = "https://www.runcoding.co.kr/bbs"; var elearning_is_member = ""; var elearning_is_admin  = ""; var elearning_is_mobile = "0"; var elearning_bo_table  = ""; var elearning_sca       = ""; var elearning_editor    = ""; var elearning_cookie_domain = ""; </script>-->
+    <link rel="stylesheet" type="text/css" href="../resource/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/common.css" />
 
-<script src="{% static 'resource/js/vendor/jquery-3.4.1.min.js' %}"></script>
-<script src="{% static 'resource/js/jquery-migrate-3.0.0.js' %}"></script>
-<script src="{% static 'resource/js/vendor/modernizr-3.7.1.min.js' %}"></script>
-<script src="{% static 'resource/js/common.js?ver=20200730001' %}"></script>
-<script src="{% static 'resource/js/wrest.js?ver=20200730001' %}"></script>
+    <link rel="stylesheet" type="text/css" href="../resource/css/layout.css" />
+
+    <script src="../resource/js/vendor/jquery-3.4.1.min.js"></script>
+    <script src="../resource/js/vendor/modernizr-3.7.1.min.js"></script>
+
 </head>
 <body>
-<header>
-    <div class="header_wrap">
-        <a href="http://ec2-54-180-116-142.ap-northeast-2.compute.amazonaws.com:8000/" class="logo">
-            <img src="{% static 'resource/img/common/logo.png' %}" alt="runcoding">
-        </a>
-        <!-- gnb -->
-        <ul class="menu">
-            <li>
-                <a href="{% static 'lecture/lecture_list.html' %}">코딩키트</a>
-            </li>
-            <li>
-                <a href="{% static 'lounge/coding_lounge.html' %}">코딩라운지</a>
-            </li>
+    <header>
+        <div class="header_wrap">
+            <a href="../index_runcoding.html" class="logo">
+                <img src="../resource/img/common/logo.png" alt="runcoding">
+            </a>
+            <!-- gnb -->
+            <ul class="menu">
+                <li>
+                    <a href="lecture_list.html">코딩키트</a>
+                </li>
+                <li>
+                    <a href="../lounge/coding_lounge.html">코딩라운지</a>
+                </li>
 
-            <li>
-                <a href="{% static 'comunity/coding_comunity.html' %}">커뮤니티</a>
-            </li>
-            <li>
-                <a href="{% static 'lecture/myclass_list.html' %}">나의 강의실</a>
-            </li>
-        </ul>
-        <div class="ab_right">
-            <!-- 비로그인 -->
-            <!--<a href="login.html" class="login">
-                로그인
-            </a>-->
+                <li>
+                    <a href="../comunity/coding_comunity.html">커뮤니티</a>
+                </li>
+                <li>
+                    <a href="myclass_list.html">나의 강의실</a>
+                </li>
+            </ul>
+            <div class="ab_right">
+                <!-- 비로그인 -->
+                <!--<a href="login.html" class="login">
+                    로그인
+                </a>-->
 
-            <!-- 로그인 -->
-            <div class="user_menu">
-                <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
-                <ul class="sub_menu">
-                    <li>
-                        <a href="mypage.html">내 프로필</a>
-                    </li>
-                    <li>
-                        <a href="coupon.html">내 쿠폰</a>
-                    </li>
-                    <li>
-                        <a href="orderList.html">주문내역</a>
-                    </li>
-                    <li>
-                        <a href="login.html">로그아웃</a>
-                    </li>
-                </ul>
+                <!-- 로그인 -->
+                <div class="user_menu">
+                    <span class="userImg"><img src="../resource/img/sub/img_user.png" alt="유저 프로필"></span>
+                    <ul class="sub_menu">
+                        <li>
+                            <a href="mypage.html">내 프로필</a>
+                        </li>
+                        <li>
+                            <a href="coupon.html">내 쿠폰</a>
+                        </li>
+                        <li>
+                            <a href="orderList.html">주문내역</a>
+                        </li>
+                        <li>
+                            <a href="login.html">로그아웃</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</header>
-
+    </header>
 
     <div class="wrap">
         <!-- sub visual -->
@@ -100,7 +96,7 @@
                         <span>[엠블럭 + AI]</span>
                     </div>
                 </div>
-                <img class="subVisual codingKit" src="{% static 'resource/img/sub/sv_codingKit.png' %}" alt="코딩키트">
+                <img class="subVisual codingKit" src="../resource/img/sub/sv_codingKit.png" alt="코딩키트">
             </div>
         </section>
         <!-- sub visual -->
@@ -109,7 +105,7 @@
         <div class="codingKit_list detail">
             <div class="lecture_list detail">
                 <div class="detail_area">
-                    <img src="{% static 'resource/img/Trashcan/trashcan_main.jpg' %}" alt="상품상세 이미지">
+                    <img src="../resource/img/Trashcan/trashcan_main.jpg" alt="상품상세 이미지">
 
                     <div class="precaution">
                         <span class="cautionTitle">구매 전 유의사항</span>
