runcoding homepage ver01 - menu page

--- a/static/lecture/lecture_list.html
+++ b/static/lecture/lecture_list.html
@@ -39,7 +39,7 @@
 <body>
 <header>
     <div class="header_wrap">
-        <a href="../index_runcoding.html" class="logo">
+        <a href="http://ec2-54-180-116-142.ap-northeast-2.compute.amazonaws.com:8000/" class="logo">
             <img src="../resource/img/common/logo.png" alt="runcoding">
         </a>
         <!-- gnb -->
