--- a/static/lecture/myclass.html
+++ b/static/lecture/myclass.html
@@ -53,7 +53,7 @@
     </script>
 
     <div class="header_wrap">
-        <a href="../index_runcoding.html" class="logo">
+        <a href="http://ec2-54-180-116-142.ap-northeast-2.compute.amazonaws.com:8000/" class="logo">
             <img src="../resource/img/common/logo.png" alt="runcoding">
         </a>
         <!-- gnb -->
