runcoding homepage ver01 - nodownload

--- a/static/lecture/myclass.html
+++ b/static/lecture/myclass.html
@@ -124,7 +124,7 @@
                     <!-- 동영상 영역입니다. -->
                     <div class="video_area">
 <!--                        <img src="../resource/img/sub/samp_video.png" alt="video area">-->
-                        <video id="video_ctrl" width ="750" height="500" id="a_video" controls src="../resource/data/arduino_trashcan/arduino_install.mp4" >
+                        <video id="video_ctrl" width ="750" height="500" id="a_video" controls controlsList="nodownload" src="../resource/data/arduino_trashcan/arduino_install.mp4" >
                         </video>
 
                     </div>
