--- a/static/lecture/myclass.html
+++ b/static/lecture/myclass.html
@@ -38,7 +38,7 @@
 <script src="../resource/js/wrest.js?ver=20200730001"></script>
 
 </head>
-<body>
+<body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 <header>
 
     <script>
@@ -49,6 +49,27 @@
 
         var video  = document.getElementById('video_ctrl');
         video.src = src;
+    }
+
+    // F12 버튼 방지
+    $(document).ready(function(){
+        $(document).bind('keydown',function(e){
+            if ( e.keyCode == 123 /* F12 */) {
+                e.preventDefault();
+                e.returnValue = false;
+            }
+        });
+    });
+
+    // 우측 클릭 방지
+    document.onmousedown=disableclick;
+    status="Right click is not available.";
+
+    function disableclick(event){
+        if (event.button==2) {
+            alert(status);
+            return false;
+        }
     }
     </script>
 
