--- a/static/lecture/myclass.html
+++ b/static/lecture/myclass.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0050)http://www.runcoding.co.kr/_html/myClass_view.html -->
-<html xmlns="http://www.w3.org/1999/xhtml" class=" sizes customelements history pointerevents postmessage webgl websockets cssanimations csscolumns csscolumns-width csscolumns-span csscolumns-fill csscolumns-gap csscolumns-rule csscolumns-rulecolor csscolumns-rulestyle csscolumns-rulewidth csscolumns-breakbefore csscolumns-breakafter csscolumns-breakinside flexbox picture srcset webworkers"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html xmlns="http://www.w3.org/1999/xhtml" >
+<!--      class=" sizes customelements history pointerevents postmessage webgl websockets cssanimations csscolumns csscolumns-width csscolumns-span csscolumns-fill csscolumns-gap csscolumns-rule csscolumns-rulecolor csscolumns-rulestyle csscolumns-rulewidth csscolumns-breakbefore csscolumns-breakafter csscolumns-breakinside flexbox picture srcset webworkers"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
+<head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>코딩키트 | 머릿속 생각을 쉽게,뚝딱 런코딩</title>
     <meta name="description" content="" />
