--- a/static/lecture/lecture_view_mblock.html
+++ b/static/lecture/lecture_view_mblock.html
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="Keywords" content="runcoding" />
     <meta http-equiv="Copyright" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
     <meta name="robots" content="index,follow">
     <meta name="format-detection" content="telephone=no" />
 
