runcoding homepage ver01 - lounge

--- a/static/lecture/lecture_list.html
+++ b/static/lecture/lecture_list.html
@@ -203,7 +203,7 @@
                 CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
                 지금 시작해보세요.
             </span>
-    <a href="" class="btn">시작하기</a>
+    <a href="../lecture/lecture_list.html" class="btn">시작하기</a>
 </div>
 
 <footer>
