--- a/static/lounge/coding_lounge.html
+++ b/static/lounge/coding_lounge.html
@@ -104,15 +104,29 @@
 <!-- sub visual -->
 
 <!-- codingLounge list -->
-<div class="codingLounge_list">
-    <ul class="thumb_list">
-                <li>게시물이 없습니다.</li>    </ul>
+        <div class="codingLounge_list">
+            <ul class="thumb_list">
+                <li>
+                    <img src="../resource/img/Trashcan/trashcan_main.jpg" alt="코딩 라운지 리스트 썸네일">
+                    <div class="text_area">
+                        <span class="title">스마트 휴지통 뽐내기</span>
+<!--                        <p class="writer">런코딩</p>-->
+<!--                        <p class="date">2020.06.30</p>-->
+                        <a href="coding_lounge_view.html" class="btn brd_detail">같이 보기</a>
+                    </div>
+                </li>
+            </ul>
+            <div class="paging_area">
+                <a><img src="../resource/img/sub/go_first.png"></a>
+                <a><img src="../resource/img/sub/go_prev.png"></a>
+                <a class="active">1</a>
+                <a>2</a>
+                <a>3</a>
+                <a><img src="../resource/img/sub/go_next.png"></a>
+                <a><img src="../resource/img/sub/go_last.png"></a>
+            </div>
+        </div>
 
-
-</div>
-
-
-<!-- } 모듈 목록 끝 -->
 
 <div class="banner bottom">
     <img class="bg left01" src="../resource/img/sub/bg_botBanner_left01.png" alt="bg01">
@@ -122,7 +136,7 @@
                 CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
                 지금 시작해보세요.
             </span>
-    <a href="" class="btn">시작하기</a>
+    <a href="../lecture/lecture_list.html" class="btn">시작하기</a>
 </div>
 
 <footer>
