runcoding homepage ver01 - lounge

--- a/static/lounge/coding_lounge_view.html
+++ b/static/lounge/coding_lounge_view.html
@@ -91,7 +91,7 @@
                 <a href="../comunity/coding_comunity.html">커뮤니티</a>
             </li>
             <li>
-                <a href="myclass_list.html">나의 강의실</a>
+                <a href="../lecture/myclass_list.html">나의 강의실</a>
             </li>
         </ul>
         <div class="ab_right">
@@ -162,8 +162,6 @@
                 <a href="coding_lounge.html" class="btn list_more" >목록으로</a>
                </div>
             </div>
-
-
         </div>
 
         <div class="banner bottom">
