runcoding homepage ver01 - comutiy

--- a/static/comunity/coding_comunity.html
+++ b/static/comunity/coding_comunity.html
@@ -111,15 +111,42 @@
             <col style="width:80%">
             <col style="width:12%">
         </colgroup>
-        <thead>
-        <tr>
-            <th>번호</th>
-            <th>제목</th>
-            <th>글쓴이</th>
-        </tr>
-        </thead>
-        <tbody>
-                <tr><td colspan="5" class="empty_table">게시물이 없습니다.</td></tr>        </tbody>
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th>번호</th>-->
+<!--            <th>제목</th>-->
+<!--            <th>글쓴이</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--                <tr><td colspan="5" class="empty_table">게시물이 없습니다.</td></tr>        </tbody>-->
+
+        <div class="accordion">
+            <input type="radio" name="accordion" id="answer01">
+            <label for="answer01">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.
+            </p></div>
+            <input type="radio" name="accordion"  id="answer02">
+            <label for="answer02">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.
+            </p></div>
+            <input type="radio" name="accordion"  id="answer03">
+            <label for="answer03">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.
+            </p></div>
+            <input type="radio" name="accordion"  id="answer04">
+            <label for="answer04">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
+                인공지능이 포함된 키트에서는 꼭 필요합니다.
+            </p></div>
+        </div>
     </table>
 
 
