runcoding homepage ver01 - comutiy css

--- a/static/comunity/coding_comunity.html
+++ b/static/comunity/coding_comunity.html
@@ -105,12 +105,12 @@
 
 <!-- community table -->
 <div class="community_area">
-    <table>
-        <colgroup>
-            <col style="width:8%">
-            <col style="width:80%">
-            <col style="width:12%">
-        </colgroup>
+<!--    <table>-->
+<!--        <colgroup>-->
+<!--            <col style="width:8%">-->
+<!--            <col style="width:80%">-->
+<!--            <col style="width:12%">-->
+<!--        </colgroup>-->
 <!--        <thead>-->
 <!--        <tr>-->
 <!--            <th>번호</th>-->
@@ -147,7 +147,7 @@
                 인공지능이 포함된 키트에서는 꼭 필요합니다.
             </p></div>
         </div>
-    </table>
+<!--   // </table>-->
 
 
 </div>
