--- a/static/comunity/coding_comunity.html
+++ b/static/comunity/coding_comunity.html
@@ -24,9 +24,9 @@
     <link rel="stylesheet" type="text/css" href="../resource/css/slick.css" />
     <link rel="stylesheet" type="text/css" href="../resource/css/slick-theme.css" />
 
-    <link rel="stylesheet" type="text/css" href="../resource/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/common.css" />
-    <link rel="stylesheet" type="text/css" href="../resource/css/layout.css" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/reset.css?after" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/common.css?after" />
+    <link rel="stylesheet" type="text/css" href="../resource/css/layout.css?after" />
 <!--<script>-->
 <!--var elearning_url       = "https://www.runcoding.co.kr"; var elearning_bbs_url   = "https://www.runcoding.co.kr/bbs"; var elearning_is_member = ""; var elearning_is_admin  = ""; var elearning_is_mobile = "0"; var elearning_bo_table  = ""; var elearning_sca       = ""; var elearning_editor    = ""; var elearning_cookie_domain = ""; </script>-->
 
