--- a/static/comunity/coding_comunity.html
+++ b/static/comunity/coding_comunity.html
@@ -120,28 +120,28 @@
 <!--        </thead>-->
 <!--        <tbody>-->
 <!--                <tr><td colspan="5" class="empty_table">게시물이 없습니다.</td></tr>        </tbody>-->
-
+        <h5>궁금해요~~</h5>
         <div class="accordion">
             <input type="radio" name="accordion" id="answer01">
-            <label for="answer01">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <label for="answer01">01. 꼭 WIFI 환경이여야 하나요?<em></em></label>
             <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.
             </p></div>
             <input type="radio" name="accordion"  id="answer02">
-            <label for="answer02">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <label for="answer02">02. 꼭 WIFI 환경이여야 하나요?<em></em></label>
             <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.
             </p></div>
             <input type="radio" name="accordion"  id="answer03">
-            <label for="answer03">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <label for="answer03">03. 꼭 WIFI 환경이여야 하나요?<em></em></label>
             <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.
             </p></div>
             <input type="radio" name="accordion"  id="answer04">
-            <label for="answer04">꼭 WIFI 환경이여야 하나요?<em></em></label>
+            <label for="answer04">04. 꼭 WIFI 환경이여야 하나요?<em></em></label>
             <div><p>인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.인공지능이 포함된 키트에서는 꼭 필요합니다.
                 인공지능이 포함된 키트에서는 꼭 필요합니다.
