--- a/static/lecture/lecture_view_mblock.html
+++ b/static/lecture/lecture_view_mblock.html
@@ -299,7 +299,7 @@
                     </div>
                     <div class="btn_area">
                         <a class="btn cart">장바구니</a>
-                        <a class="btn buy">바로구매</a>
+                        <a class="btn buy" href="../payment/pay_info.html">바로구매</a>
                     </div>
                 </div>
             </div>
